--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <br>
     <span class="note">Move your right wrist to change songs and move left wrist to play the song!</span>
 </h3>
+<h3 id="song"></h3>
 
 <button class="btn btn-success play" onclick="play()">Play</button>
 
